--- a/hray.cabal
+++ b/hray.cabal
@@ -15,7 +15,7 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Math
+  exposed-modules:     Math.Vector
   build-depends:       base >= 4.7 && < 5
   default-language:    Haskell2010
 
@@ -36,7 +36,7 @@ test-suite hray-test
                      , hspec
                      , QuickCheck
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  other-modules:       Math.MathSpec
+  other-modules:       Math.VectorSpec
   default-language:    Haskell2010
 
 source-repository head
