--- a/hray.cabal
+++ b/hray.cabal
@@ -15,9 +15,11 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Math
+  exposed-modules:     Canvas 
+                       Math
                      , Math.Vector
   build-depends:       base >= 4.7 && < 5
+                     , containers
   default-language:    Haskell2010
 
 executable hray
@@ -37,7 +39,8 @@ test-suite hray-test
                      , hspec
                      , QuickCheck
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  other-modules:       Math.VectorSpec
+  other-modules:       CanvasSpec  
+                     , Math.VectorSpec
   default-language:    Haskell2010
 
 source-repository head
