--- a/hray.cabal
+++ b/hray.cabal
@@ -20,6 +20,7 @@ library
                      , Math.Vector
   build-depends:       base >= 4.7 && < 5
                      , containers
+                     , array
   default-language:    Haskell2010
 
 executable hray
