--- a/hray.cabal
+++ b/hray.cabal
@@ -20,8 +20,8 @@ library
                      , Math.Vector
   build-depends:       base >= 4.7 && < 5
                      , containers
+                     , vector
                      , lens
-                     , array
   default-language:    Haskell2010
 
 executable hray
@@ -29,7 +29,9 @@ executable hray
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
+                     , lens
                      , hray
+                     , vector
   default-language:    Haskell2010
 
 test-suite hray-test
@@ -38,7 +40,7 @@ test-suite hray-test
   main-is:             Spec.hs
   build-depends:       base
                      , hray
-                     , array
+                     , vector
                      , hspec
                      , QuickCheck
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
