--- a/hray.cabal
+++ b/hray.cabal
@@ -16,7 +16,7 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Canvas 
-                       Math
+                     , Math
                      , Math.Vector
   build-depends:       base >= 4.7 && < 5
                      , containers
@@ -41,6 +41,7 @@ test-suite hray-test
   build-depends:       base
                      , hray
                      , vector
+                     , lens
                      , hspec
                      , QuickCheck
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
