--- a/hray.cabal
+++ b/hray.cabal
@@ -18,6 +18,7 @@ library
   exposed-modules:     Canvas 
                      , Math
                      , Math.Vector
+                     , Math.Matrix
   build-depends:       base >= 4.7 && < 5
                      , containers
                      , vector
@@ -47,6 +48,7 @@ test-suite hray-test
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   other-modules:       CanvasSpec  
                      , Math.VectorSpec
+                     , Math.MatrixSpec
   default-language:    Haskell2010
 
 source-repository head
