--- a/hray.cabal
+++ b/hray.cabal
@@ -16,13 +16,14 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Canvas 
+                     , Colour
                      , Math
                      , Math.Vector
-                     , Math.Matrix
   build-depends:       base >= 4.7 && < 5
                      , containers
                      , vector
                      , lens
+                     , linear
   default-language:    Haskell2010
 
 executable hray
@@ -43,12 +44,13 @@ test-suite hray-test
                      , hray
                      , vector
                      , lens
+                     , linear
                      , hspec
                      , QuickCheck
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   other-modules:       CanvasSpec  
+                     , ColourSpec
                      , Math.VectorSpec
-                     , Math.MatrixSpec
   default-language:    Haskell2010
 
 source-repository head
