--- a/hray.cabal
+++ b/hray.cabal
@@ -18,7 +18,6 @@ library
   exposed-modules:     Canvas 
                      , Colour
                      , Math
-                     , Math.Vector
   build-depends:       base >= 4.7 && < 5
                      , containers
                      , vector
@@ -33,7 +32,7 @@ executable hray
   build-depends:       base
                      , lens
                      , hray
-                     , vector
+                     , linear
   default-language:    Haskell2010
 
 test-suite hray-test
@@ -42,15 +41,14 @@ test-suite hray-test
   main-is:             Spec.hs
   build-depends:       base
                      , hray
-                     , vector
                      , lens
                      , linear
                      , hspec
+                     , vector
                      , QuickCheck
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   other-modules:       CanvasSpec  
                      , ColourSpec
-                     , Math.VectorSpec
   default-language:    Haskell2010
 
 source-repository head
