--- a/hray.cabal
+++ b/hray.cabal
@@ -49,6 +49,7 @@ test-suite hray-test
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   other-modules:       CanvasSpec  
                      , ColourSpec
+                     , MathSpec
   default-language:    Haskell2010
 
 source-repository head
