--- a/hray.cabal
+++ b/hray.cabal
@@ -19,6 +19,7 @@ library
                      , Colour
                      , Math
                      , Ray
+                     , Scene
   build-depends:       base >= 4.7 && < 5
                      , containers
                      , vector
@@ -52,6 +53,7 @@ test-suite hray-test
                      , ColourSpec
                      , MathSpec
                      , RaySpec
+                     , SceneSpec
   default-language:    Haskell2010
 
 source-repository head
