--- a/hray.cabal
+++ b/hray.cabal
@@ -20,6 +20,7 @@ library
                      , Math
                      , Ray
                      , Scene
+                     , Sphere
   build-depends:       base >= 4.7 && < 5
                      , containers
                      , vector
@@ -55,6 +56,7 @@ test-suite hray-test
                      , MathSpec
                      , RaySpec
                      , SceneSpec
+                     , SphereSpec
   default-language:    Haskell2010
 
 source-repository head
