--- a/hray.cabal
+++ b/hray.cabal
@@ -23,9 +23,9 @@ library
                      , Sphere
   build-depends:       base >= 4.7 && < 5
                      , containers
-                     , vector
                      , lens
                      , linear
+                     , parallel
   default-language:    Haskell2010
 
 executable hray
@@ -48,7 +48,6 @@ test-suite hray-test
                      , lens
                      , linear
                      , hspec
-                     , vector
                      , QuickCheck
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   other-modules:       CanvasSpec  
