--- a/hray.cabal
+++ b/hray.cabal
@@ -31,7 +31,7 @@ library
 executable hray
   hs-source-dirs:      app
   main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:         -threaded -rtsopts -eventlog
   build-depends:       base
                      , lens
                      , hray
